--- a/blog_site/blog/templates/blog/post/share.html
+++ b/blog_site/blog/templates/blog/post/share.html
@@ -15,4 +15,14 @@
       <input type="submit" value="Send e-mail">
     </form>
   {% endif %}
+  <p>
+    <a href="{{ post.get_absolute_url }}">
+      Back to post
+    </a>
+  </p>
+  <p>
+    <a href="{% url "blog:post_list" %}">
+      Back to post listing
+    </a>
+  </p>
 {% endblock %}
