--- a/blog_site/blog/templates/blog/post/list.html
+++ b/blog_site/blog/templates/blog/post/list.html
@@ -2,10 +2,25 @@
 {% block title %}My Blog{% endblock %}
 {% block content %}
   <h1>My Blog</h1>
+  {% if tag %}
+    <h2>Posts tagged with "{{ tag.name }}"</h2>
+  {% endif %}
   {% for post in posts %}
     <h2>
       <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
     </h2>
+    <p class="tags">
+      Tags:
+      {% for tag in post.tags.all %}
+        <a href="{% url "blog:post_list_by_tag" tag.slug }">
+          {{ tag.name }}
+        </a>
+        {% if not forloop.last %}
+          {# Add a comma after the displayed tag #}
+          ,
+        {% endif %}
+      {% endfor %}
+    </p>
     <p class="date">
       Published {{ post.publish }} by {{ post.author}}
     </p>
@@ -13,5 +28,5 @@
   {% endfor %}
   {# There *must not* be any spaces in the with tag arguments. #}
   {# page_obj comes from inheriting from ListView in PostListView #}
-  {% include "pagination.html" with page=page_obj %}
+  {% include "pagination.html" with page=posts %}
 {% endblock %}
