If the post has no tags, the page will specify so instead of staying silent.

--- a/blog_site/blog/templates/blog/post/list.html
+++ b/blog_site/blog/templates/blog/post/list.html
@@ -19,6 +19,8 @@
           {# Add a comma after the displayed tag #}
           ,
         {% endif %}
+      {% empty %}
+        None yet
       {% endfor %}
     </p>
     <p class="date">
