--- a/blog_site/blog/templates/blog/base.html
+++ b/blog_site/blog/templates/blog/base.html
@@ -1,3 +1,5 @@
+{# Load custom filters and tags #}
+{% load blog_tags %}
 {# Load CSS #}
 {% load static %}
 <!DOCTYPE html>
@@ -15,6 +17,7 @@
   <div id="sidebar">
     <h2>My blog</h2>
     <p>Welcome to my blog!</p>
+    <p>There are a total of {% total_posts %} posts made so far</p>
   </div>
 </body>
 </html>
