--- a/blog_site/blog/templates/blog/base.html
+++ b/blog_site/blog/templates/blog/base.html
@@ -18,6 +18,8 @@
     <h2>My blog</h2>
     <p>Welcome to my blog!</p>
     <p>There are a total of {% total_posts %} posts made so far</p>
+    <h3>Latest posts</h3>
+    {% show_latest_posts 3 %}
   </div>
 </body>
 </html>
