--- a/blog_site/blog/templates/blog/post/list.html
+++ b/blog_site/blog/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 {% block title %}My Blog{% endblock %}
 {% block content %}
   <h1>My Blog</h1>
@@ -26,7 +27,8 @@
     <p class="date">
       Published {{ post.publish }} by {{ post.author}}
     </p>
-    {{ post.body|truncatewords:30|linebreaks }}
+    {# Since we are applying markdown, we must use truncatewords_html to avoid any unclosed tags #}
+    {{ post.body|markdown|truncatewords_html:30 }}
   {% endfor %}
   {# There *must not* be any spaces in the with tag arguments. #}
   {# page_obj comes from inheriting from ListView in PostListView #}
