--- a/blog_site/blog/templates/blog/base.html
+++ b/blog_site/blog/templates/blog/base.html
@@ -31,6 +31,11 @@
         </li>
       {% endfor %}
     </ul>
+    <p>
+      <a href="{% url "blog:post_feed" %}">
+        Subscribe to my RSS feed
+      </a>
+    </p>
   </div>
 </body>
 </html>
