--- a/bookmarks/account/templates/account/login.html
+++ b/bookmarks/account/templates/account/login.html
@@ -1,3 +1,4 @@
+{# Depricated, used as an exercise to understand account authentication #}
 {% extends "base.html" %}
 {% block title %}Log-in{% endblock %}
 {% block content %}
