--- a/bookmarks/account/templates/registration/login.html
+++ b/bookmarks/account/templates/registration/login.html
@@ -15,6 +15,9 @@
       {% csrf_token %}
       <input type="hidden" name="next" value="{{ next }}" />
       <p><input type="submit" value="Log in"></p>
+      <a href="{% url "password_reset" %}">
+        Forgot password?
+      </a>
     </form>
   </div>
 {% endblock %}
