--- a/bookmarks/account/templates/account/dashboard.html
+++ b/bookmarks/account/templates/account/dashboard.html
@@ -3,4 +3,16 @@
 {% block content %}
   <h1>Dashboard</h1>
   <p>Welcome to your dashboard.</p>
+  <ul>
+    <li>
+      <a href="{% url "edit" %}">
+        Edit profile
+      </a>
+    </li>
+    <li>
+      <a href="{% url "password_change" %}">
+        Change password
+      </a>
+    </li>
+  </ul>
 {% endblock %}
